apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__tests__authenticated_directive.snap
---
source: apollo-router/src/plugins/authorization/tests.rs
assertion_line: 301
expression: response
---
{
  "data": {
    "orga": {
      "id": null,
      "creatorUser": {
        "id": 0,
        "name": "Ada",
        "phone": null
      }
    }
  },
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "orga",
        "id"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    },
    {
      "message": "Unauthorized field or type",
      "path": [
        "orga",
        "creatorUser",
        "phone"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
