apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__tests__authenticated_directive_reject_unauthorized.snap
---
source: apollo-router/src/plugins/authorization/tests.rs
assertion_line: 419
expression: response
---
{
  "data": {},
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "orga",
        "id"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    },
    {
      "message": "Unauthorized field or type",
      "path": [
        "orga",
        "creatorUser",
        "phone"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
