apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__tests__authenticated_request.snap
---
source: apollo-router/src/plugins/authorization/tests.rs
assertion_line: 90
expression: response
---
{
  "data": {
    "orga": {
      "id": 1,
      "creatorUser": {
        "id": 0,
        "name": "Ada",
        "phone": "1234"
      }
    }
  }
}
