apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__tests__cache_key_metadata.snap
---
source: apollo-router/src/plugins/authorization/tests.rs
assertion_line: 1118
expression: response
---
{
  "data": {
    "currentUser": {
      "id": 1,
      "name": null,
      "phone": "1234"
    }
  },
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "currentUser",
        "name"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
