apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__tests__scopes_directive.snap
---
source: apollo-router/src/plugins/authorization/tests.rs
assertion_line: 645
expression: response
---
{
  "data": {
    "orga": {
      "id": 1,
      "creatorUser": null
    }
  },
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "orga",
        "creatorUser"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
